--- a/index.mdx
+++ b/index.mdx
@@ -3,7 +3,7 @@ title: "Introduction"
 description: "Welcome to the new home for your documentation"
 ---
 
-## Setting up
+## Setting up the right documentation
 
 Get your documentation site up and running in minutes.
 
