--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,7 +3,7 @@ title: Changelog
 description: Track updates, new features, and improvements to the documentation
 ---
 
-## January 2026
+yolo
 
 ### January 7, 2026
 
